--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.15",
     "axios": "^1.4.0",
+    "framer-motion": "^10.12.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
+    "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^9.1.3"
+    "react-time-picker": "^6.2.0",
+    "react-toastify": "^9.1.3",
+    "react-toggle": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
