--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,14 @@
   "author": "Metclan (Harmony); ",
   "license": "MIT",
   "dependencies": {
+    "@hapi/hapi": "^21.3.2",
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "formidable": "v2",
+    "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1"
   },
   "scripts": {
