--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-table": "^8.9.8",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.21",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
