--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-spinners": "^0.13.8",
     "react-time-picker": "^6.2.0",
     "react-toastify": "^9.1.3",
-    "react-toggle": "^4.1.3"
+    "react-toggle": "^4.1.3",
+    "rsuite": "^5.40.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
