--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-query": "4.5.0",
     "@tanstack/react-table": "^8.9.8",
-    "axios": "^1.4.0",
+    "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.12.21",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-clock": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
